--- a/css/componentes/_proyectos.scss
+++ b/css/componentes/_proyectos.scss
@@ -29,7 +29,8 @@ padding: 10px;
 
 .texto-foto-proyectos{
 	margin-top:20px;
-	width:70%;
+	text-align: center;
+	width:90%;
 	margin-left: auto;
 	margin-right: auto;
 }
