--- a/css/componentes/_nosotros.scss
+++ b/css/componentes/_nosotros.scss
@@ -6,3 +6,29 @@
     margin: 0 !important;
     padding: 0;
 }
+.experiencia{
+    width: 70%;
+    margin: auto;
+}
+.contenedor_logos_p{
+
+    display: flex;
+    justify-content: space-between;
+    
+    flex-wrap: wrap;
+
+    .caja_logo_p{
+        width: 100px;
+        height: 100px;
+        box-shadow: 0 0 0 0.2px #000;
+        img{
+            width: 100%;
+            transition: all 0.5s ease;
+            &:hover{
+                cursor: pointer;
+                box-shadow: 0 0 0 1px red,
+                            1px 1px 5px;
+            }
+        }
+    }
+}
