--- a/css/estilos.css
+++ b/css/estilos.css
@@ -277,6 +277,41 @@ nav .shadows {
   padding: 0;
 }
 
+.experiencia {
+  width: 70%;
+  margin: auto;
+}
+
+.contenedor_logos_p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contenedor_logos_p .caja_logo_p {
+  width: 100px;
+  height: 100px;
+  -webkit-box-shadow: 0 0 0 0.2px #000;
+          box-shadow: 0 0 0 0.2px #000;
+}
+
+.contenedor_logos_p .caja_logo_p img {
+  width: 100%;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.contenedor_logos_p .caja_logo_p img:hover {
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 0 1px red, 1px 1px 5px;
+          box-shadow: 0 0 0 1px red, 1px 1px 5px;
+}
+
 /*slider clientes*/
 .slider-clientes h2 {
   margin-left: 20px;
@@ -374,6 +409,7 @@ video {
 /*acordeon*/
 .accordion {
   background-color: #00a0c6;
+  margin-bottom: 10px;
   padding: 10px 20px;
   font-size: 1em;
   font-family: 'Nunito Sans', sans-serif;
