--- a/css/componentes/_slider-banner.scss
+++ b/css/componentes/_slider-banner.scss
@@ -1,6 +1,7 @@
 .slider-caja{
     width: 100%;
     max-width: 1700px;
+    margin:auto;
     // height: 500px;
     background-color: white;
     overflow: hidden;
