--- a/css/componentes/_slider.scss
+++ b/css/componentes/_slider.scss
@@ -74,6 +74,7 @@ fin de slider clientes
 .caja-slider {
     text-align: center;
     height: 550px;
+    margin: auto;
     background-color: #f3f3f4;
     overflow: hidden;
 }
