--- a/css/componentes/_clientes.scss
+++ b/css/componentes/_clientes.scss
@@ -47,7 +47,7 @@
             &:hover{
                 filter: grayscale(80%);
                 cursor: pointer;
-                border: 0.1px solid black;
+                // border: 0.1px solid black;
                
                 
             }    
