--- a/css/componentes/_banner-paginas.scss
+++ b/css/componentes/_banner-paginas.scss
@@ -2,6 +2,7 @@
 .banner {
     width: 100%;
     height: 400px;
+    margin-top: 120px;
     margin-bottom: 40px;
     background-color: #f8f8f0;
     background-size: 100%;
@@ -47,7 +48,7 @@
     position: absolute;
     font-family: 'Nunito Sans', sans-serif;
     left: 20%;
-    top: 60vh;
+    top: 40vh;
     font-size: 3em;
     font-weight: bold;
     color: #fff;
