--- a/css/componentes/_menu-superior.scss
+++ b/css/componentes/_menu-superior.scss
@@ -4,13 +4,20 @@
 		
 			@media(max-width:400px){
 			display:block;
-			padding: 10px;
+			margin-top: 70px;
+			
+			color:white;
+			position: fixed;
 			font-weight: bold;
 			cursor: pointer;
-					
+			z-index: 100;
 									}
 			}
 nav {
+	position: fixed;
+	width: 100%;
+	margin-top:100px;
+	z-index: 9;
     background-color: white;
     border: solid 2px #f1f1f1;
 	transition: 0.5s all;
@@ -57,10 +64,11 @@ nav {
         font-size: 0.9em;
         color: gray;
         transition: all 0.5s;
-
+		width:100%;
         &:hover {
 //            background-color: rgba(0,160,198,1.00);
-            color: white;
+			color: white;
+			
         } 
     }
 	 
@@ -72,6 +80,7 @@ nav .shadows {
     height: 81px;
 }
 .menu_lista .swing:hover {
+	
     -webkit-animation: swing 1s ease;
     animation: swing 1s ease;
     -webkit-animation-iteration-count: 1;
