--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,13 +7,20 @@
 @media (max-width: 400px) {
   .boton_menu {
     display: block;
-    padding: 10px;
+    margin-top: 70px;
+    color: white;
+    position: fixed;
     font-weight: bold;
     cursor: pointer;
+    z-index: 100;
   }
 }
 
 nav {
+  position: fixed;
+  width: 100%;
+  margin-top: 100px;
+  z-index: 9;
   background-color: white;
   border: solid 2px #f1f1f1;
   -webkit-transition: 0.5s all;
@@ -66,6 +73,7 @@ a {
   color: gray;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  width: 100%;
 }
 
 a:hover {
@@ -192,6 +200,7 @@ nav .shadows {
 .banner {
   width: 100%;
   height: 400px;
+  margin-top: 120px;
   margin-bottom: 40px;
   background-color: #f8f8f0;
   background-size: 100%;
@@ -259,7 +268,7 @@ nav .shadows {
   position: absolute;
   font-family: 'Nunito Sans', sans-serif;
   left: 20%;
-  top: 60vh;
+  top: 40vh;
   font-size: 3em;
   font-weight: bold;
   color: #fff;
@@ -577,6 +586,12 @@ div.panel {
   background: skyblue;
 }
 
+@media screen and (max-width: 450px) {
+  .contenedor_master_proyectos {
+    width: 100%;
+  }
+}
+
 .contendor_proyectos_fotos {
   margin: auto;
   display: -webkit-box;
@@ -824,6 +839,9 @@ h1, h2, h3 {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: #383838;
   width: 100%;
   height: 100px;
@@ -834,6 +852,7 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  z-index: 10;
 }
 
 header img {
