--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -54,12 +54,16 @@ h1, h2, h3{
 }
 
 header {
+    position: fixed;
+    top:0;
+    left:0;
     background-color: #383838;
     width: 100%;
     height: 100px;
     padding: 10px;
     display: flex;
     justify-content: space-between;
+    z-index: 10;
 
     img {
         width: 200px;
